Update sample container